--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -497,6 +497,7 @@
       "name": "活动名称",
       "help": "自动选择至最新的活动",
       "campaign_main": "主线图",
+      "event_20200917_cn":  "复刻蝶海梦花"
       "raid_20220630": "来自鸢尾的天使",
       "raid_20210708": "复刻穿越彼方的水线",
       "event_20200820_cn": "复刻铁血音符誓言",
